add additional conditions for m4 status check

--- a/configs/mx6sxrtssd_defconfig
+++ b/configs/mx6sxrtssd_defconfig
@@ -13,7 +13,7 @@ CONFIG_SPL_LIBDISK_SUPPORT=y
 CONFIG_DISTRO_DEFAULTS=y
 CONFIG_NR_DRAM_BANKS=1
 CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=arch/arm/mach-imx/spl_sd.cfg"
-CONFIG_BOOTCOMMAND="run findfdt; run mmcboot;"
+CONFIG_BOOTCOMMAND="run loadbootscript; run bootscript; run findfdt; run mmcboot;"
 CONFIG_BOARD_EARLY_INIT_F=y
 CONFIG_SPL_ENV_SUPPORT=y
 CONFIG_SPL_EXT_SUPPORT=y
